drupal/sites/all/themes/opf/opf.css
@font-face {
    font-family: 'NewRegular';
    src: url('hit-the-road-webfont.eot');
    src: url('hit-the-road-webfont.eot?#iefix') format('embedded-opentype'),
         url('hit-the-road-webfont.woff') format('woff'),
         url('hit-the-road-webfont.ttf') format('truetype'),
         url('hit-the-road-webfont.svg#NewRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'HighwayGothicRegular';
    src: url('hwygoth-webfont.eot');
    src: url('hwygoth-webfont.eot?#iefix') format('embedded-opentype'),
         url('hwygoth-webfont.woff') format('woff'),
         url('hwygoth-webfont.ttf') format('truetype'),
         url('hwygoth-webfont.svg#HighwayGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'HighwayGothicWideRegular';
    src: url('hwygwde-webfont.eot');
    src: url('hwygwde-webfont.eot?#iefix') format('embedded-opentype'),
         url('hwygwde-webfont.woff') format('woff'),
         url('hwygwde-webfont.ttf') format('truetype'),
         url('hwygwde-webfont.svg#HighwayGothicWideRegular') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'ExpresswayRegular';
    src: url('expressway_rg-webfont.eot');
    src: url('expressway_rg-webfont.eot?#iefix') format('embedded-opentype'),
         url('expressway_rg-webfont.woff') format('woff'),
         url('expressway_rg-webfont.ttf') format('truetype'),
         url('expressway_rg-webfont.svg#ExpresswayRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body { 
  font-size: 12px;
  font-family: 'Nimbus Sans', 'Nimbus Sans L', FreeSans, 'Liberation Sans', 'Dejavu Sans Condensed', HelveticaNeue-Light, 'Helvetica Neue Light', Helvetica, Arial, sans-serif;
}
a { text-decoration:none; }
a:hover { text-decoration:underline; }

/* logo */
h1 {
  padding-top: 16px;
  padding-bottom: 8px;
}
h1 a{
	width: 128px;
	height: 69px;
	display:block;
	text-indent: -99999em;
	background: url('logo.gif') no-repeat left;
	font-family: "NewRegular";
}

/* background colors */
body { background-color: #dee6e8; }
div.container { margin: 0 auto; }
#page-container { background-color: #fff; border: 1px solid #d0d0d0; border-top: none; border-bottom: none; }

/* top navigation (there is the small nav and the larger subnav) */
#header {
  clear: none;
  background-color: #fff; 
}
#header a {
	text-decoration: none;
	color:#101010;
}

#header a:hover {
	text-decoration: underline;
}

#header #nav { 
  float: right;
/*	display:block; 
	width:550px;
	position: relative;
	top: -10px;
	left: 350px;
	*/
	font-size: 16px;
	padding-top: 24px;
	clear: both;
}
#header #snav li {
	padding-right:15px;
}
#header #nav li a {
	display:inline-block;
	padding:3px 6px 4px 6px;
	background-color:#9dd6e9;
	color: #146B8A;
	border: 1px solid #177ba0;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
  behavior:url(border-radius.htc);
} 
#header #nav li a:hover {
	background-color:#439fbd;
	//border: 1px solid #177ba0;
	color:#fff;
	border: 1px solid #9dd6e9;
	//color:#9dd6e9;
	text-decoration: none;
}
#header #nav li a.active {
	background-color:#439fbd;
	border: 1px solid #177ba0;
	color:#fff;
}
#header #nav li a.active:hover {
	background-color:#439fbd;
	border: 1px solid #177ba0;
	color:#fff;
}

#subnav {
  float: right;
  background-color: #DAF0F6;
  background-color: #B0DEED;
  background-color: #eee;
  font-size: 12px;
  margin-right: 20px;
	border:1px solid #9BD5E8;
	border:1px solid #d8d8d8;
  -webkit-border-bottom-right-radius: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px;
  -moz-border-radius-bottomleft: 5px;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  behavior:url(border-radius.htc);
}
#subnav a {
	color: #146B8A;
	color: #666;
}
#subnav {
  padding: 2px 4px;
}
#subnav li {
	padding: 5px 4px 6px 4px;
}

/* center column styling (not within a node or node list) */
.col-center {
	color:#505050;
	font-size:1.1em;
}
.col-center a {
	color:#177ba0; 
}
.col-center h2 {
	font-family: "NewRegular";
	color:#177ba0;
	font-size:1.7em;
	line-height:1.2em;
/*	border-bottom:1px solid #439fbd;*/
}
.col-center .tabs {
	font-size:1.0em;
}
.col-center .breadcrumb {
	font-size:0.7em;
}
.col-center .item-list {
	margin-top:2em;
}

/* basic node styling (within content area) */
.col-center .node {
	margin: 0 0 2.5em;
	padding: 0 0 1.917em;
}
.col-center .node h2 {
	border:0;
	margin-bottom:0.5em;
}
.col-center .node h2 a {
	color:#505050;
	font-size:0.75em;
	line-height:1.1em;
}
.col-center .node h3 {
  font-family: "NewRegular";
}
.col-center .node h4 {
  font-family: "NewRegular";
}
.col-center .node h5 {
  font-family: "NewRegular";
}
.col-center .node h6 {
  font-family: "NewRegular";
}
p {
  margin-bottom: 0.85em;
}
.col-center .node .meta {
  margin-bottom: 0.75em;
}
.col-center .node .meta .submitted {
	color:#aaa;
	font-size:0.9em;
}
.col-center .node .meta .submitted a,
.col-center .node .meta .terms a {
	color:#666;
}
.col-center .node .node-links .links a {
	font-size:0.9em;
}

.col-center {
  margin-left: 28px;  
}
.col-right {
  margin-left: 17px;
  margin-right: 0;
}
.col-left {
  margin-left: 22px;
  margin-right: 0;
}

/* right column blocks (defaults to blue background) */
.col-right .block {
	position: relative;
	background-color:#B0DEED;
	border:1px solid #9BD5E8;
	padding:7px;
	//margin-right: 10px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  behavior:url(border-radius.htc);
}

/* left column blocks (defaults to white background) */
.col-left .block {
	position: relative;
	background-color:#fff;
	border:1px solid #B0DEED;
	padding:7px;
  //margin-left: 10px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
  behavior:url(border-radius.htc);
}

/* general sidebar block styling */
.block .item-list ul {
	margin:0;
}
.block .item-list ul li {
	list-style:none;
	line-height:1.3em;
	margin-bottom:0.55em;
}
.block ul.menu li {
  line-height: 1.3em;
}
ul li, ul.menu li, .item-list ul li, li.leaf {
  list-style-image: none !important;
	list-style-type:disc;
}
.block a {
	color:#146B8A;
}
.block li a {
	font-size:1.1em;
}
.block .more-link a {
	font-size:0.85em;
	font-weight:bold;
	text-transform: uppercase;
}
.col-right h3,
.col-left h3 {
	font-family: "NewRegular";
	font-size: 1.0em;
	text-transform: uppercase;
	color:#333;
}

/* left sidebar block overrides: blue background */
.col-left .block-user {
	background-color:#B0DEED;
	border:0;
}
.col-left, .col-right {
	font-size:0.95em;
}
.col-left .view-content .picture img {
	border: 1px solid #999;
	background-color: white;
	padding: 2px;
}

/* sidebar block overrides: outline/ white background */
.col-right .block-forum {
	background-color:#fff;
	border:1px solid #B0DEED;
}

/* Sticky items should be displayed differently */
.sticky {
  background-color: #e6f4f9;
  border: none !important;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  behavior:url(border-radius.htc);
}
.sticky div, .sticky h2 {
  padding: 5px 10px;
}

/* the recent bloggers block */
.view-bloggers .views-row {
  padding-bottom: 1em;
  border-bottom: 1px solid #B0DEED;
  clear: both;
}
.view-bloggers .views-row-first {
  padding-top: 0;
}
.view-bloggers .views-row-last {
  padding-bottom: 0;
  border-bottom: none;
}
.view-bloggers .views-row .picture {
  float: right;
  margin-left: 5px;
}
.view-bloggers .views-field-title, .views-field-name {
  display: inline;
}
.view-bloggers .views-field-name:before {
  content: ' by ';
}
.view-bloggers .views-field-totalcount, .view-bloggers .views-field-uid {
  padding-top: 0.3em;
}
.view-bloggers .views-field-timestamp {
  display: inline;
  color: red;
}

/* the recent comments block */
.view-comments-recent .views-row {
  padding: 0.3em 0 0.5em 0;
  border-bottom: 1px solid #146B8A;
  clear: both;
}
.view-comments-recent .views-row-first {
  padding-top: 0;
}
.view-comments-recent .views-row-last {
  padding-bottom: 0;
  border-bottom: none;
}
.view-comments-recent .views-field-comment {
  padding-top: 0.3em;
}
.view-comments-recent .views-field-timestamp {
  padding-top: 0.3em;
  text-align: right;
}

/* the upcoming events block */
.views-field-field-date-value {
  padding: 0 0 0.5em 0;
  text-align: right;  
}

